<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/background_color"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/background_color">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="10dp"
                    android:layout_marginLeft="10dp"

                    android:src="@drawable/ic_arrow" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="20sp" />


                <TextView
                    android:id="@+id/tv_logout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="10dp"
                    android:layout_marginRight="10dp"
                    android:fontFamily="sans-serif-thin"
                    android:text="@string/logout"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/et_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:background="#8357DC"
        android:layout_marginTop="30dp"
        android:hint="@string/search"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="15dp"
        android:inputType="text"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/ic_search"
        android:drawablePadding="5dp"
        android:drawableLeft="@drawable/ic_search" />


    <TextView
        android:id="@+id/tv_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
    android:layout_below="@+id/et_search"
        android:layout_marginTop="30dp"

        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:fontFamily="sans-serif-thin"
        android:text="@string/lists"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_add_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tv_list"
        android:background="#8357DC"
        android:layout_marginTop="20dp"
        android:text="@string/create_list"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:padding="15dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:drawableStart="@drawable/ic_plus"
        android:drawablePadding="10dp"
        android:gravity="left"
        android:drawableLeft="@drawable/ic_plus" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_lists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:layout_below="@id/btn_add_list"
        />


</RelativeLayout>