<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_back"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_arrow"
            android:drawableLeft="@drawable/ic_arrow"
            android:gravity="center"
            android:padding="12dp"
            android:textColor="#FFFFFF"
            android:textSize="14sp" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center"
            android:text="task to do"
            android:textColor="#FFF"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:gravity="center_vertical|right"
            android:paddingRight="12dp"
            android:text="@string/edit"
            android:textColor="#FFFFFF"
            android:textSize="16sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="24dp"
        android:background="@drawable/shape_recycler"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:gravity="center"
                android:text="Title"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_list_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="0dp"
                android:background="@drawable/shape_radius"
                android:gravity="center"
                android:padding="4dp"
                android:text="list name"
                android:textColor="#FFFF"
                android:textSize="18sp"
                android:textStyle="normal" />

        </LinearLayout>


        <TextView
            android:id="@+id/tv_list_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="0dp"
            android:gravity="left"
            android:padding="4dp"
            android:text="2020/17/22"
            android:textColor="#9F9E9E"
            android:textSize="18sp"
            android:textStyle="normal" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="24dp"
            android:layout_marginRight="32dp"
            android:layout_marginBottom="24dp"
            android:background="#2000" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="0dp"
            android:gravity="left"
            android:padding="4dp"
            android:text="description"
            android:textColor="#9C9F9E9E"
            android:textSize="24sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="8dp"
            android:padding="4dp"
            android:enabled="false"
            android:text="description......."
            android:background="@color/white"
            android:textColor="#9F9E9E"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:padding="4dp"
            android:text="@string/delete"
            android:textColor="#9F9E9E"
            android:textSize="18sp"
            android:textStyle="normal" />

        <TextView
            android:id="@+id/tv_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="20dp"
            android:gravity="left"
            android:padding="4dp"
            android:text="@string/save"
            android:visibility="gone"
            android:textColor="#9F9E9E"
            android:textSize="18sp"
            android:textStyle="normal" />


    </LinearLayout>
</LinearLayout>